Bubble layout: Fix image time alignment

--- a/res/css/views/rooms/_BubbleLayout.scss
+++ b/res/css/views/rooms/_BubbleLayout.scss
@@ -186,6 +186,7 @@ $left-gutter: 56px;
 
     .mx_MImageBody {
         margin-right: 0;
+        position: relative;
 
         .mx_MFileBody_download {
             display: none;
